# build-eved-db

./: CLAUDE.md  Makefile  README.md  build.py  config.toml  evedmap.py  ngtest.py  pyproject.toml
sql/: create_signal.sql  create_signal_trip_index.sql
sql/eved/: create_ix_node_traj_id.sql  create_ix_signal_h3_12.sql  create_node.sql  create_signal.sql  create_trajectory.sql  create_trajectory_h3_12_end_index.sql  create_trajectory_h3_12_ini_index.sql  create_trajectory_vehicle_index.sql  create_vehicle.sql  insert_signal.sql  insert_trajectories.sql  insert_vehicle.sql
sql/eved_match/: create_ix_node_h3_12.sql
src/common/: geomath.py
src/db/: EvedDb.py  MatchDb.py  api.py
src/ui/: MainSelector.py
src/ui/message/: Messenger.py
src/ui/models/: map.py  trip.py
src/ui/selectors/: MainSelector.py  TripSelector.py  VehicleSelector.py
src/ui/services/: trip.py
src/ui/views/: LayerView.py  MainView.py  MapLayerView.py  MapView.py
