[project]
name = "build-eved-db"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "h3>=4.1.2",
    "nicegui>=2.9.1",
    "numpy>=2.2.0",
    "openpyxl>=3.1.5",
    "pandas>=2.2.3",
    "pydantic>=2.10.6",
    "pyvalhalla>=3.2.0",
    "requests>=2.32.3",
    "tomli>=2.2.1",
    "tqdm>=4.67.1",
]
